src/test/ui/issues/issue-28568.rs
struct MyStruct;

impl Drop for MyStruct {
    fn drop(&mut self) { }
}

impl Drop for MyStruct {
//~^ ERROR conflicting implementations of trait
    fn drop(&mut self) { }
}

fn main() {}
